App: Prevent layout shifting when searching (#304)
Set a minimum height of the full screen height to prevent the scroll
position from changing when results are filtered out.

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   text-align: center;
 }
 
+.results {
+  min-height: 100vh;
+}
+
 .results-text {
   font-style: italic;
   text-align: center;
